--- a/packages/vehicle-lifecycle-vda/client/index.html
+++ b/packages/vehicle-lifecycle-vda/client/index.html
@@ -20,10 +20,13 @@
   <link rel="stylesheet" href="less/stylesheets/app/directives/new-block-alert/new-block-alert.css">
   <link rel="stylesheet" href="less/stylesheets/app/directives/recent-transaction-table/recent-transaction-table.css">
   <link rel="stylesheet" href="less/stylesheets/app/directives/suspicious-vehicles-table/suspicious-vehicles-table.css">
+  <link rel="stylesheet" href="less/stylesheets/app/directives/asset-activity-table/asset-activity-table.css">
+
 
 
   <link rel="stylesheet" href="less/stylesheets/app/views/dashboard/dashboard.css">
   <link rel="stylesheet" href="less/stylesheets/app/views/suspicious_vehicles/suspicious_vehicles.css">
+  <link rel="stylesheet" href="less/stylesheets/app/views/asset_activity/asset_activity.css">
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -41,9 +44,11 @@
   <script src="app/directives/new-block-alert/new-block-alert.directive.js"></script>
   <script src="app/directives/recent-transaction-table/recent-transaction-table.directive.js"></script>
   <script src="app/directives/suspicious-vehicles-table/suspicious-vehicles-table.directive.js"></script>
+  <script src="app/directives/asset-activity-table/asset-activity-table.directive.js"></script>
 
   <script src="app/views/dashboard/dashboard.controller.js"></script>
   <script src="app/views/suspicious_vehicles/suspicious_vehicles.controller.js"></script>
+  <script src="app/views/asset_activity/asset_activity.controller.js"></script>
 
 
 </head>
