live feed highlighting

--- a/packages/vehicle-lifecycle-vda/client/app/directives/recent-transaction-table/recent-transaction-table.html
+++ b/packages/vehicle-lifecycle-vda/client/app/directives/recent-transaction-table/recent-transaction-table.html
@@ -17,7 +17,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="t in transactions | orderBy: order.key : order.reverse">
+			<tr ng-repeat="t in transactions | orderBy: order.key : order.reverse" class="{{ t.transaction_class }}">
 				<td>{{ t.timestamp | date:'medium' }}</td>
 				<td>{{ t.transaction_id }}</td>
 				<td>{{ t.transaction_type }}</td>
