New manufacturer page

--- a/packages/vehicle-lifecycle-manufacturing/client/index.html
+++ b/packages/vehicle-lifecycle-manufacturing/client/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="less/stylesheets/app/directives/action-tile/action-tile.css">
   <link rel="stylesheet" href="less/stylesheets/app/views/login/login.css">
   <link rel="stylesheet" href="less/stylesheets/app/views/dashboard/dashboard.css">
+  <link rel="stylesheet" href="less/stylesheets/app/views/reports/reports.css">
   <link rel="stylesheet" href="less/stylesheets/app/views/inventory/inventory.css">
 
   <script src="bower_components/angular/angular.js"></script>
@@ -38,6 +39,7 @@
   <script src="app/views/login/login.controller.js"></script>
 
   <script src="app/views/dashboard/dashboard.controller.js"></script>
+  <script src="app/views/reports/reports.controller.js"></script>
   <script src="app/views/inventory/inventory.controller.js"></script>
   <script src="app/views/inventory/inventory.vehicle.controller.js"></script>
   <script src="app/views/orders/orders.controller.js"></script>
