--- a/packages/vehicle-lifecycle-vda/client/app/directives/header/header.html
+++ b/packages/vehicle-lifecycle-vda/client/app/directives/header/header.html
@@ -34,7 +34,7 @@
     <div class="bc-vda-stats-item" ng-class="{active:isActive('/asset_activity')}" ui-sref="asset_activity">
       <p class="bc-vda-stats-item-header">ASSET ACTIVITY</p>
       <div class="bc-vda-item-value-container">
-        <p class="bc-vda-stats-item-value">{{v5c_issued | number:0}}</p>
+        <p class="bc-vda-stats-item-value">{{total_events | number:0}}</p>
         <img src="assets/images/up.svg" class="bc-vda-stats-item-arrow" />
       </div>
 
