improvements from proposal
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-lifecycle-car-builder/src/pages/builder/builder.html
+++ b/packages/vehicle-lifecycle-car-builder/src/pages/builder/builder.html
@@ -155,6 +155,6 @@
   </ion-card>
 
   <ion-card (click)="purchase()">
-    <button ion-button color="secondary">Purchase and Build <img src="assets/arrow_right.svg"></button>
+    <button ion-button color="secondary" id="purchase" >Purchase and Build <img src="assets/arrow_right.svg"></button>
   </ion-card>
 </ion-content>
