--- a/packages/vehicle-lifecycle-car-builder/src/pages/status/status.html
+++ b/packages/vehicle-lifecycle-car-builder/src/pages/status/status.html
@@ -7,7 +7,7 @@
     <h3>Order</h3>
     <h2><strong>Arium</strong> {{car.name}}</h2>
 
-    <h5>#7092926</h5>
+    <h5>#{{ orderId }}</h5>
   </ion-card>
 
   <ion-card>
