Added tutorial app with app in app for all apps
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-manufacture-manufacturing/client/app/directives/sidebar/sidebar.html
+++ b/packages/vehicle-manufacture-manufacturing/client/app/directives/sidebar/sidebar.html
@@ -1,6 +1,6 @@
 <div class="bc-man-sidebar">
   <div class="header">
-    <img src="../../../assets/images/logo.svg" />
+    <img src="manufacturer/assets/images/logo.svg" />
     <h2><strong>Arium</strong> Manufacture</h2>
   </div>
 
