--- a/packages/vehicle-manufacture-vda/client/app/directives/header/header.html
+++ b/packages/vehicle-manufacture-vda/client/app/directives/header/header.html
@@ -1,6 +1,6 @@
 <div class="bc-vda-header">
   <div class="bc-vda-logo" ui-sref="dashboard">
-    <img src="assets/images/VDA_Logo.svg"/>
+    <img src="regulator/assets/images/VDA_Logo.svg"/>
     <p>Vehicle &<br>
     Drivers<br>
     Authority</p>
@@ -8,10 +8,10 @@
 
   <div class="bc-vda-header-search">
     <div class="bc-vda-header-search-bar">
-        <img class="search" src="assets/images/search.svg"/>
+        <img class="search" src="regulator/assets/images/search.svg"/>
         <input type="text" placeholder="Search GOV.IO" />
     </div>
-    <img class="user" src="assets/images/user.png" />
+    <img class="user" src="regulator/assets/images/user.png" />
 
   </div>
   <div class="bc-vda-header-stats-container">
@@ -19,7 +19,7 @@
       <p class="bc-vda-stats-item-header">REGISTERED VEHICLES</p>
       <div class="bc-vda-item-value-container">
         <p class="bc-vda-stats-item-value">{{registered_vehicles | number:0}}</p>
-        <img src="assets/images/up.svg" class="bc-vda-stats-item-arrow" />
+        <img src="regulator/assets/images/up.svg" class="bc-vda-stats-item-arrow" />
       </div>
 
     </div>
@@ -27,7 +27,7 @@
       <p class="bc-vda-stats-item-header">VIN ASSIGNED</p>
       <div class="bc-vda-item-value-container">
         <p class="bc-vda-stats-item-value">{{vin_assigned | number:0}}</p>
-        <img src="assets/images/up.svg" class="bc-vda-stats-item-arrow" />
+        <img src="regulator/assets/images/up.svg" class="bc-vda-stats-item-arrow" />
       </div>
 
     </div>
@@ -35,12 +35,12 @@
       <p class="bc-vda-stats-item-header">OWNER ISSUED</p>
       <div class="bc-vda-item-value-container">
         <p class="bc-vda-stats-item-value">{{v5c_issued | number:0}}</p>
-        <img src="assets/images/up.svg" class="bc-vda-stats-item-arrow" />
+        <img src="regulator/assets/images/up.svg" class="bc-vda-stats-item-arrow" />
       </div>
     </div>
     <div class="bc-vda-stats-filter">
       <p class="bc-vda-stats-filter-text">IN THE LAST <span class="bc-vda-week">WEEK</span></p>
-      <img src="assets/images/down-white.png" class="bc-vda-stats-item-arrow" />
+      <img src="regulator/assets/images/down-white.png" class="bc-vda-stats-item-arrow" />
     </div>
   </div>
 </div>
