--- a/packages/vehicle-manufacture-tutorial/client/index.html
+++ b/packages/vehicle-manufacture-tutorial/client/index.html
@@ -11,7 +11,10 @@
 
   <link rel="stylesheet" href="/less/stylesheets/app/views/tutorial/tutorial.css">
   <link rel="stylesheet" href="/less/stylesheets/assets/stylesheets/common.css">
+  <link rel="stylesheet" href="/less/stylesheets/assets/stylesheets/font.css">
   <link rel="stylesheet" href="/less/stylesheets/app/directives/sidebar/sidebar.css">
+  <link rel="stylesheet" href="/less/stylesheets/app/directives/notification/notification.css">
+  <link rel="stylesheet" href="/less/stylesheets/app/directives/header/header.css">
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -20,6 +23,8 @@
 
   <script src="app/views/tutorial/tutorial.controller.js" ></script>
   <script src="app/directives/sidebar/sidebar.directive.js"></script>
+  <script src="app/directives/notification/notification.directive.js"></script>
+  <script src="app/directives/header/header.directive.js"></script>
 
 </head>
 
