--- a/packages/vehicle-manufacture-car-builder/src/pages/login/login.html
+++ b/packages/vehicle-manufacture-car-builder/src/pages/login/login.html
@@ -3,10 +3,14 @@
     <img class="map" src="assets/world_map.svg" alt="">
 
     <div class="login-content">
-      <img src="assets/logo.svg" class="logo" alt="logo" />
-      <img src="assets/paul.png" class="picture" alt="profile picture" />
-      <h2>Welcome back <strong>Paul</strong></h2>
-      <button ion-button color="secondary" (click)="login()">Build your car <img src="assets/arrow_right.svg"></button>
+        <div class="details" >
+            <img src="assets/logo.svg" class="logo" alt="logo" />
+            <img src="assets/paul.png" class="picture" alt="profile picture" />
+            <h2>Welcome back <strong>Paul</strong></h2>
+        </div>
+        <div class="holder" >
+            <button id="buildCar" ion-button color="secondary" (click)="login()">Build your car <img src="assets/arrow_right.svg"></button>
+        </div>
     </div>
   </div>
 </ion-content>
