--- a/packages/vehicle-manufacture-tutorial/client/app/directives/header/header.html
+++ b/packages/vehicle-manufacture-tutorial/client/app/directives/header/header.html
@@ -3,7 +3,7 @@
     <div>
         <b>{{ identity.name }}</b>, {{ identity.type }}
         <div class="pipe" ></div> 
-        <svg>
+        <svg id="reset">
             <use xlink:href="/assets/images/reset.svg#reset"></use>
         </svg>
     </div>
