--- a/packages/vehicle-manufacture-tutorial/client/app/directives/sidebar/sidebar.html
+++ b/packages/vehicle-manufacture-tutorial/client/app/directives/sidebar/sidebar.html
@@ -2,7 +2,7 @@
         <div id="expandContract" ng-click="expanded = !expanded" >
         </div>
         <div id="app-links" >
-            <div class="app-tab" ng-class="{'selected': location === '/car-builder'}" ng-click="location = '/car-builder'" >
+            <div class="app-tab" ng-class="{'selected': location === '/car-builder'}" ng-click="changePage('/car-builder', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/buyer.svg#buyer"></use>
@@ -10,7 +10,7 @@
                 </div>
                 <div class="app-name" >Builder</div>
             </div>
-            <div class="app-tab" ng-class="{'selected': location === '/manufacturer-dashboard'}" ng-click="location = '/manufacturer-dashboard'" >
+            <div class="app-tab" ng-class="{'selected': location === '/manufacturer-dashboard'}" ng-click="changePage('/manufacturer-dashboard', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/manufacturer.svg#manufacturer"></use>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="app-name" >Manufacturer</div>
             </div>
-            <div class="app-tab" ng-class="{'selected': location === '/regulator-dashboard'}" ng-click="location = '/regulator-dashboard'" >
+            <div class="app-tab" ng-class="{'selected': location === '/regulator-dashboard'}" ng-click="changePage('/regulator-dashboard', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/regulator.svg#regulator"></use>
@@ -28,15 +28,13 @@
             </div>
         </div>
         <div id="tutorial-text" >
-            <table>
-                <tr ng-class="{'complete': item.complete}" ng-repeat="item in tutorial[tutorialPage].steps">
-                    <td>{{!item.complete ? ($index+1)+'.' : '&#10004;' }}</td><td>{{ item.text }}</td>
-                </tr>
-            </table>
-            
+            <div class="holder" ng-class="{'complete': item.complete}" ng-repeat="item in tutorial[tutorialPage].steps">
+                <div class="title" ng-bind-html="item.title"></div>
+                <div ng-bind-html="item.text"></div>
+            </div>
         </div>
         <div id="actions">
-            <button ng-if="tutorial[tutorialPage].button" ng-disabled="tutorial[tutorialPage].button.disabled" ng-click="tutorial[tutorialPage].button.action()" >
+            <button ng-if="tutorial[tutorialPage].button" ng-disabled="tutorial[tutorialPage].button.disabled" ng-click="changePage(tutorial[tutorialPage].button.navigateTo, 1)" >
                 {{ tutorial[tutorialPage].button.text }}
             </button>
         </div>
