--- a/packages/vehicle-manufacture-tutorial/client/app/directives/header/header.html
+++ b/packages/vehicle-manufacture-tutorial/client/app/directives/header/header.html
@@ -1,5 +1,5 @@
 <div id="header" >
-    <div><b>IBM</b>&nbsp;Blockchain / Platform Develop {{ appName }} Sample App</div>
+    <div><b class="addSpace">IBM</b>Blockchain / Platform Develop {{ appName }} Sample App</div>
     <div>
         <b>{{ identity.name }}</b>, {{ identity.type }}
         <div class="pipe" ></div> 
