--- a/packages/vehicle-manufacture-tutorial/client/app/directives/sidebar/sidebar.html
+++ b/packages/vehicle-manufacture-tutorial/client/app/directives/sidebar/sidebar.html
@@ -2,7 +2,7 @@
         <div id="expandContract" ng-click="expanded = !expanded" >
         </div>
         <div id="app-links" >
-            <div class="app-tab" ng-class="{'selected': location === '/car-builder'}" ng-click="changePage('/car-builder', 0)" >
+            <div class="app-tab" ng-class="{'selected': location === '/car-builder', 'selectable': mode === 'normal'}" ng-click="changePage('/car-builder', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/buyer.svg#buyer"></use>
@@ -10,7 +10,7 @@
                 </div>
                 <div class="app-name" >Builder</div>
             </div>
-            <div class="app-tab" ng-class="{'selected': location === '/manufacturer-dashboard'}" ng-click="changePage('/manufacturer-dashboard', 0)" >
+            <div class="app-tab" ng-class="{'selected': location === '/manufacturer-dashboard', 'selectable': mode === 'normal'}" ng-click="changePage('/manufacturer-dashboard', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/manufacturer.svg#manufacturer"></use>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="app-name" >Manufacturer</div>
             </div>
-            <div class="app-tab" ng-class="{'selected': location === '/regulator-dashboard'}" ng-click="changePage('/regulator-dashboard', 0)" >
+            <div class="app-tab" ng-class="{'selected': location === '/regulator-dashboard', 'selectable': mode === 'normal'}" ng-click="changePage('/regulator-dashboard', 0)" >
                 <div class="app-icon" >
                     <svg aria-hidden="true" >
                         <use xlink:href="/assets/images/regulator.svg#regulator"></use>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div id="actions">
-            <button ng-if="tutorial[tutorialPage].button" ng-disabled="tutorial[tutorialPage].button.disabled" ng-click="changePage(tutorial[tutorialPage].button.navigateTo, 1)" >
+            <button class="tutorial-button" ng-if="tutorial[tutorialPage].button" ng-disabled="tutorial[tutorialPage].button.disabled" ng-click="changePage(tutorial[tutorialPage].button.navigateTo, 1)" >
                 {{ tutorial[tutorialPage].button.text }}
             </button>
         </div>
