--- a/packages/vehicle-manufacture-car-builder/src/pages/builder/builder.html
+++ b/packages/vehicle-manufacture-car-builder/src/pages/builder/builder.html
@@ -155,6 +155,6 @@
   </ion-card>
 
   <ion-card>
-    <button ion-button color="secondary" id="purchase" [disabled]="!(states['interior'] && states['colour'] && states['trim'])" (click)="purchase()" >Purchase and Build <img src="assets/arrow_right.svg" (click)="purchase()"></button>
+    <button ion-button color="secondary" id="purchase" [disabled]="!(states['interior'] && states['colour'] && states['trim'])" (click)="purchase()" >Place Order <img src="assets/arrow_right.svg" (click)="purchase()"></button>
   </ion-card>
 </ion-content>
