--- a/packages/vehicle-manufacture-car-builder/src/pages/login/login.html
+++ b/packages/vehicle-manufacture-car-builder/src/pages/login/login.html
@@ -5,11 +5,10 @@
     <div class="login-content">
         <div class="details" >
             <img src="assets/logo.svg" class="logo" alt="logo" />
-            <img src="assets/paul.png" class="picture" alt="profile picture" />
-            <h2>Welcome back <strong>Paul</strong></h2>
+            <h2>Arium Configurator</h2>
         </div>
         <div class="holder" >
-            <button id="buildCar" ion-button color="secondary" (click)="login()">Build your car <img src="assets/arrow_right.svg"></button>
+            <button id="buildCar" ion-button color="secondary" (click)="login()">Design your car <img src="assets/arrow_right.svg"></button>
         </div>
     </div>
   </div>
